built an eat outside action